// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders content children with no title 1`] = `
<div
  className="sc-bdVaJa cWsHuj"
>
  <span>
    No title
  </span>
</div>
`;

exports[`renders content children with title 1`] = `
<div
  className="sc-bdVaJa cWsHuj"
>
  <span>
    Awesome title with: 
    Mocked title
  </span>
</div>
`;
